# evolution-go-to-folder

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
m4/: evolution.m4
src/: Makefile.am  gcc-diagnostics.h  go-to-folder.c  hello-world.c
